# hifi

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-09-hifi-implementation.md
docs/superpowers/specs/: 2026-04-08-hifi-design.md
examples/profiles/: edm.yml  piano.yml  rock.yml
src/hifi/: __init__.py  cleaner.py  cli.py  config.py  db.py  downloader.py  genre_graph.py  library.py  listenbrainz.py  playlist.py  recommender.py  searcher.py  tagger.py  userconfig.py
tests/: test_cleaner.py  test_cli.py  test_config.py  test_db.py  test_downloader.py  test_genre_filter.py  test_genre_graph.py  test_library.py  test_listenbrainz.py  test_playlist.py  test_profile_merge.py  test_recommender.py  test_searcher.py  test_tagger.py  test_userconfig.py
